# dagap

./: .gitignore  CMakeLists.txt  README.md  package.xml
dagap/: CMakeLists.txt  package.xml
dagap_demo/: CMakeLists.txt  dagap-demo.asd  dagap_demo.asd  package.xml
dagap_demo/scripts/: demo.py
dagap_demo/scripts/dagap_opm_demo/: demo.py
dagap_demo/scripts/popcorn_demo/: demo.py
dagap_demo/scripts/pycram_integration_demo/: demo.py  pick_and_place_demo.py
dagap_demo/src/: dagap-demo.lisp  package.lisp
dagap_msgs/: CMakeLists.txt  package.xml
dagap_msgs/msg/: KitchenObjectLocation.msg  OPMObjectQuery.msg
dagap_msgs/srv/: GetGraspPose.srv  GetNextOPMObject.srv  GetOPMSortedList.srv
dagappy/: CMakeLists.txt  package.xml  setup.py
dagappy/config/: semantic.yaml
dagappy/demos/: pr2.urdf  simple_sim.py
dagappy/launch/: dagap.launch  dagap_with_objects.launch
dagappy/scripts/: dagap_node.py  object_frame_broadcaster.py  opm_dagap_test.py  opm_test.py
dagappy/src/dagap/: dagap.py  knowrob.py  mesher.py  sample.py  tae.py
dagappy/src/dagap/gp/: grasp_planner.py
dagappy/src/dagap/tree/: grasp_planner.py  mesher.py  nl_module.py  robot.py  semantic_module.py
dagappy/src/dagap/tree/opm/: opm.py
dagappy/src/dagap/utils/: tfwrapper.py
dagappy/src/opm/: opm.py
launch/: dagap.launch
scripts/: dagap_node.py
src/dagap/: dagap.py
