<?xml version="1.0"?>
<package format="2">
  <name>dagap_demo</name>
  <version>0.0.0</version>
  <description>The dagap_demo package</description>

  <maintainer email="jeroen.schaefer@uni-bremen.de">Jeroen Schäfer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_lisp</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dagap_msgs</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>actionlib_lisp</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>dagap_msgs</build_export_depend>
  <build_export_depend>roslisp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>actionlib_lisp</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>dagap_msgs</exec_depend>
  <exec_depend>roslisp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
