<?xml version="1.0"?>
<package format="2">
  <name>dagappy</name>
  <version>0.0.0</version>
  <description>The dagap package</description>

  <maintainer email="jeroen.schaefer@uni-bremen.de">Jeroen Schäfer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <depend>geometry_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dagap_msgs</build_depend>
  <build_depend>giskardpy</build_depend>
  <build_depend>py_trees</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>dagap_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>giskardpy</exec_depend>
  <exec_depend>py_trees</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
